--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "omnipay/common": "v3.0"
+        "omnipay/common": "^3.0"
     },
     "require-dev": {
         "omnipay/tests": "~3.0",
