--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "League\\Paystack\\Test\\": "tests"
+            "Omnipay\\Paystack\\Test\\": "tests"
         }
     },
     "scripts": {
